--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- 倒计时 -->
   <div class="time">
-    <span class="title">距离2024元旦还有</span>
+    <span class="title">距离元旦还有</span>
     <br>
     <div class="time-box">
       <div class="day-box">
